# FEM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: GaussIntegral.h  SoE.h  UniElement.h  grid.h  matrix.h
input_files/: Test.txt  Test4_31_31_trapez.txt
src/: GaussIntegral.cpp  SoE.cpp  UniElement.cpp  grid.cpp  matrix.cpp
